# pyargon2

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
pyargon2/: __init__.py  _compiler.py  argon2.py
pyargon2/classes/: FFI.py  errors.py
pyargon2/compilation/: argon2_pypi.py
src/: __init__.py  __main__.py  _argon2.c  _pi.c  argon2.py  main.py  setup.py
src/compilation/: argon2_extension_build.py  argon2_local.py  argon2_pypi.py  pi_extension_build.py
